Fixed alignment issues.

--- a/assignment2/css/styles.css
+++ b/assignment2/css/styles.css
@@ -1,5 +1,6 @@
 /* CSS Document */
 
+/*** Base CSS for All Devices ***/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +10,8 @@
 body {
     background-color: #333;
     color: #fff;
-    font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 .cat, .clong, .blong, .slong {
@@ -18,18 +20,18 @@ body {
 
 h1 {
     font-size: 175%;
+    padding: 20px 10px 10px 10px;
     text-align: center;
-    padding: 10px;
 }
 
 h2 {
-    border-bottom: 1px solid #262626;
-    border-left: 1px solid #262626;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
     border-radius: 5px;
     float: right;
     font-size: 125%;
     margin: 0;
-    padding: 10px;
+    padding: 10px 20px;
     position: relative;
 }
 
@@ -39,12 +41,14 @@ p {
 }
 
 .row {
-    padding: 10px 10px 10px 20px;
+    padding: 0 15px;
     width: 100%;
 }
 
 section {
     background-color: #5a5a5a;
+    border: 1px solid black;
+    border-radius: 5px;
     height: 224px;
     margin: 10px;
     overflow: hidden;
@@ -71,98 +75,92 @@ section:hover {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
         float: left;
-        border: 1px solid black;
-        border-radius: 5px;
     }
     .col-lg-1 {
-        width: 7.91%;
+        width: 8.33%;
     }
     .col-lg-2 {
-        width: 15.83%;
+        width: 16.66%;
     }
     .col-lg-3 {
-        width: 23.75%;
+        width: 25%;
     }
     .col-lg-4 {
-        width: 31.66%;
+        width: 33.33%;
     }
     .col-lg-5 {
-        width: 39.58%;
+        width: 41.66%;
     }
     .col-lg-6 {
-        width: 47.5%;
+        width: 50%;
     }
     .col-lg-7 {
-        width: 55.41%;
+        width: 58.33%;
     }
     .col-lg-8 {
-        width: 63.33%;
+        width: 66.66%;
     }
     .col-lg-9 {
-        width: 71.25%;
+        width: 74.99%;
     }
     .col-lg-10 {
-        width: 79.16%;
+        width: 83.33%;
     }
     .col-lg-11 {
-        width: 87.08%;
+        width: 91.66%;
     }
     .col-lg-12 {
-        width: 95%;
+        width: 100%
     }
   }
 
 /*** For Medium Devices ***/
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991.9px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
         float: left;
-        border: 1px solid black;
-        border-radius: 5px;
     }
     .col-md-1 {
-        width: 7.5%;
+        width: 8.33%;
     }
     .col-md-2 {
-        width: 15%;
+        width: 16.66%;
     }
     .col-md-3 {
-        width: 22.5%;
+        width: 25%;
     }
     .col-md-4 {
-        width: 30%;
+        width: 33.33%;
     }
     .col-md-5 {
-        width: 37.5%;
+        width: 41.66%;
     }
     .col-md-6 {
-        width: 45%;
+        width: 50%;
     }
     .col-md-7 {
-        width: 52.5%;
+        width: 58.33%;
     }
     .col-md-8 {
-        width: 60%;
+        width: 66.66%;
     }
     .col-md-9 {
-        width: 67.5%;
+        width: 74.99%;
     }
     .col-md-10 {
-        width: 75%;
+        width: 83.33%;
     }
     .col-md-11 {
-        width: 82.5%;
+        width: 91.66%;
     }
     .col-md-12 {
-        width: 90%;
+        width: 100%;
     }
   }
 
 /*** For Small Devices ***/
-@media (max-width: 767px) {
+@media (max-width: 767.9px) {
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
         float: left;
-        border: 1px solid black;
-        border-radius: 5px;
     }
     .col-sm-1 {
         width: 8.33%;
@@ -200,31 +198,24 @@ section:hover {
     .col-sm-12 {
         width: 100%;
     }
-
     .cat {
         display: block;
-        font-family: "Times New Roman",Helvetica Neue,Helvetica,Arial,sans-serif;
+        font-family: "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 150%;
+        padding-left: 25px;
         text-align: left;
     }
-
     .clong, .blong, .slong {
         display: block;
+        text-align: center;
         width: 100%;
     }
-
     .cshort, .bshort, .sshort {
         display: none;
     }
-
     h2 {
-        border-bottom: 1px solid #262626;
-        border-radius: 5px;
-        font-size: 125%;
-        padding: 10px;
-        position: relative;
+        border-left: none;
     }
-
     .menu {
         display: none;
     }
